PlayerWidget overflow issues fixed

--- a/Upnp.Control.Web/ClientApp/src/styles/_player.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_player.scss
@@ -3,23 +3,17 @@
     height: 100%;
     place-items: center;
     gap: map-get($spacers, 1);
-    grid: "art art art art art" 1fr "title title title title title" auto "prog prog prog prog prog" auto "mode prev play next vol" auto / 1fr auto auto auto 1fr;
+    grid: "art art art art art" minmax(0px, 1fr) "title title title title title" auto "prog prog prog prog prog" auto "mode prev play next vol" auto / 1fr auto auto auto 1fr;
 
     .art {
         grid-area: art;
-        width: initial;
-        height: initial;
+        height: auto;
+        object-fit: cover;
         max-width: calc(100% - 2 * map-get($spacers, 3));
         max-height: calc(100% - 2 * map-get($spacers, 3));
-
-        @media (max-height: 320px) {
-            display: none;
-        }
-
-        @include unify-parent(svg) {
-            color: var(--#{$prefix}accent-color-emphasis);
-            @include gradient-bg(var(--#{$prefix}accent-color-subtle));
-        }
+        color: var(--#{$prefix}on-tertiary-cntr);
+        background-color: var(--#{$prefix}tertiary-cntr);
+        border-radius: #{$corner-lg};
     }
 
     .pl-progress {
@@ -52,6 +46,7 @@
 
     .pl-main-btn {
         grid-area: play;
+        --#{$prefix}btn-icon-font-size: 36px;
     }
 
     .pl-volume-btn {
@@ -63,11 +58,12 @@
     }
 
     @media (max-height: 420px) {
-        grid: "art art art art art art" 1fr "prog prog prog prog prog prog" auto "prev play next title mode vol" auto / auto auto auto minmax(0, 1fr) auto auto;
+        grid: "art art art art art art" minmax(0, 1fr) "prog prog prog prog prog prog" auto "prev play next title mode vol" auto / auto auto auto minmax(0, 1fr) auto auto;
 
         .art {
             max-width: 100%;
             max-height: 100%;
+            border-radius: #{$corner-sm};
         }
     }
 
@@ -75,9 +71,11 @@
         grid: "prog prog prog prog prog prog prog prog prog" auto "prev play next . art title . mode vol" auto / auto auto auto 1fr auto minmax(0, auto) 1fr auto auto;
 
         .art {
-            max-width: 1em;
-            max-height: 1em;
-            font-size: 4rem;
+            min-height: 4rem;
+            min-width: 4rem;
+            max-height: 4rem;
+            max-width: 4rem;
+            border-radius: #{$corner-sm};
         }
 
         .pl-title {
